# exploration_dashboard

./: Home.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/pages/: 0_Datenauswahl.py  1_Datenexploration.py  1_Datenexploration.py.05ab26a0382b768ce933c60f7a229f5b.tmp  2_Datenvorbereitung.py  3_Modellierung.py  4_Evaluation.py
notebooks/: Untitled.ipynb
pages/: 0_Datenauswahl.py  1_Datenexploration.py  1_Exploration.py  2_Datenvorbereitung.py  3_Modellierung.py  4_Evaluation.py
src/mlcook/datasets/: __init__.py  ames.py  base.py  bike.py  california.py  iris.py  manager.py  melbourne.py  titanic.py
