[tool.poetry]
name = "mlcook"
version = "0.1.0"
description = "Dashboards to play with machine learning and data science concepts, for educational purposes"
authors = ["Michael Aydinbas <michael.aydinbas@gmail.com>", "Gerrit Matti Korff <matti.gerrit.korff@exxeta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.1"
numpy = "^1.23.1"
plotly = "^5.9.0"
streamlit = "^1.10.0"
pandas = "^1.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
