[tool.poetry]
name = "mlcook"
version = "0.1.0"
description = "Dashboards to play with machine learning and data science concepts, for educational purposes"
authors = ["Michael Aydinbas <michael.aydinbas@gmail.com>", "Gerrit Matti Korff <matti.gerrit.korff@exxeta.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.1.2"
numpy = "^1.23.3"
plotly = "^5.10.0"
streamlit = "^1.13.0"
pandas = "^1.5.0"
seaborn = "^0.12.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
